third_party/move/move-compiler-v2/tests/ability-check/index_ability_err_2.exp

Diagnostics:
error: resource indexing can only applied to a resource type
  ┌─ tests/ability-check/index_ability_err_2.move:9:17
  │
9 │         let _ = X<bool>[addr];
  │                 ^^^^^^^^^^^^^
